syntax = "proto3";

option csharp_namespace = "MicroIdentity.Protos";

import "Protos/Identity/accounts.proto";

// The user service definition.
service Users {
  rpc AttachUser (AppUserId) returns (StatusResponse);
  rpc DetachUser (AppUserId) returns (StatusResponse);
  rpc FindUserByEmail (FindUserByEmailRequest) returns (AppUser);
  rpc FindUserByName (FindUserByNameRequest) returns (AppUser);
}

message AppUserId
{
	int32 id = 1;
}

message FindUserByEmailRequest
{
	string email = 1;
}

message FindUserByNameRequest
{
	string name = 1;
}
